--- a/src/css/home.css
+++ b/src/css/home.css
@@ -454,3 +454,76 @@ input[type="checkbox" i] {
     text-rendering: optimizeLegibility;
     text-align: justify;
 }
+
+/* Footer */
+
+footer{
+    height: 300px;
+    background: var(--background-color);
+    padding: 75px 60px;
+}
+
+.footer__container{
+    height: 200px;
+    /* border: 3px solid red; */
+}
+
+.footer__left-container{
+    height: 100%;
+    width: 30%;
+    /* border: 2px solid green; */
+    float: left;
+}
+
+.footer__h2{
+    color: var(--white);
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.footer__h3{
+    color: var(--white);
+    font-size: 25px;
+    font-weight: 500;
+    margin-top: 10px;
+}
+
+.icons__container{
+    margin-top: 25px;
+}
+
+.social-icons{
+    color: var(--white);
+    margin-right: 40px;
+    font-size: 25px;
+}
+
+.footer__right-container{
+    height: 100%;
+    float: right;
+    /* border: 2px solid white; */
+    width: 65%;
+}
+
+.footer__info{
+    float: left;
+    /* border: 3px solid red; */
+    width: 195px;
+    height: 100%;
+}
+
+.footer__span{
+    color: var(--white);
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+}
+
+.footer__a{
+    color: var(--white);
+    font-size: 16px;
+    margin-top: 8px;
+    display: block;
+    text-decoration: none;
+    
+}
