--- a/src/css/home.css
+++ b/src/css/home.css
@@ -527,3 +527,11 @@ footer{
     text-decoration: none;
     
 }
+
+.footer__a:hover{
+    color: var(--white);
+    font-size: 16px;
+    margin-top: 8px;
+    display: block;
+    text-decoration: underline;
+}
