--- a/src/css/home.css
+++ b/src/css/home.css
@@ -107,7 +107,6 @@
     transform: translateX(2500%);
 }
 
-
 .s-cursor-pointer {
     cursor: pointer;
 }
@@ -576,9 +575,11 @@ footer{
     .theme__container__btn{
         width: 50px;
         /* transform: translateX(100%); */
-        transform: translate(500%, 120%);
+        transform: translate(500%, 40%);
     }
-
+    .navbar__brand{
+        transform: translateY(-40%);
+    }
 
     .home__container, #homepage{
         height: 720px;
