new changes on navbar__brand

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -104,7 +104,7 @@
 .theme__container__btn{
     /* border: 10px solid red; */
     padding-top: 26px;
-    transform: translateX(2500%);
+    transform: translateX(1900%);
 }
 
 .s-cursor-pointer {
@@ -574,11 +574,11 @@ footer{
     }
     .theme__container__btn{
         width: 50px;
-        /* transform: translateX(100%); */
-        transform: translate(500%, 40%);
+        transform: translate(0%,6%);
+        /* transform: translate(570%, 40%); */
     }
     .navbar__brand{
-        transform: translateY(-40%);
+        transform: translateY(0%);
     }
 
     .home__container, #homepage{
