responsive conditions fixed

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -348,6 +348,10 @@ input[type="checkbox" i] {
     height: 340px;
 } */
 
+.hide{
+    display: none;
+}
+
 .image__right__container{
     position: absolute;
     margin-top: -20%;
@@ -574,7 +578,7 @@ footer{
     }
     .theme__container__btn{
         width: 50px;
-        transform: translate(0%,6%);
+        transform: translate(10%,6%);
         /* transform: translate(570%, 40%); */
     }
     .navbar__brand{
@@ -728,8 +732,186 @@ footer{
 
 
 /*Tablet*/
-@media only screen and (max-width:768px){
+@media only screen and (min-width: 601px) and (max-width:768px){
+    .all{
+        width: 100%;
+    }
+    .nav-bar__logo__container{
+        transform: translateX(-45px);
+    }
+    .navbar__text{
+        color: var(--not-quite-dark);
+        padding: 5px 12px;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 300;
+        
+    }
+    .navbar__login__btn{
+        transform: translateX(30%);
+        width: 60%;
+        background-color: var(--bluish-purple);
+        color: var(--white);
+    }
+    .navbar__login__btn:hover{
+        color: var(--white);
+    }
+    .navbar-burger{
+        transform: translateY(25%);
+    }
+    .theme__container__btn{
+        width: 50px;
+        transform: translate(730%,8%);
+        /* transform: translate(570%, 40%); */
+    }
+    .navbar__brand{
+        transform: translateY(20%);
+    }
 
+    .home__container, #homepage{
+        height: 720px;
+        width: 100%;
+        padding: 1px;
+        margin-top: 30px;
+    }
+
+    .home__container__message{
+        width: 100%;
+        margin-left: -2em;
+    }
+    .home__main-message{
+        /* font-size: clamp(24px,5vw,34px); */
+        font-size: 35px;
+        width: 95%;
+        transform: translateX(8%);
+    }
+    .home__message{
+        text-align: justify;
+        padding-left: 50px;
+        font-size: clamp(16px,2vw,20px);
+        transform: translateY(-20%);
+    }
+    .home__message__btn{
+        transform: translate(14%,-15%);
+        width: 90%;
+        height: 100%;
+        /* border: 5px solid black; */
+    }
+    .home__btn{
+        display: block;
+    }
+    .btn__browser{
+        margin-top: 20px;
+        margin-right: 20px;
+    }
+    .image__left__container{
+        width: 70%;
+        height: 40%;
+        margin-top: 40px;
+        transform: translate(35%, 130%);
+    }
+    .image__right__container{
+        transform: translate(100%,130%);
+    }
+    .image__right__div{
+        width: 200px;
+    }
+    .hidden{
+        display: none;
+    }
+
+    .section-area{
+        height: 544px;
+        padding: 16px 24px;
+    }
+    .section__left-container{
+        float: none;
+        width: 100%;
+        max-width: 678px;
+        max-height: 440px;
+    }
+    .section__img__container{
+        width: 100%;
+        height: 70%;
+        max-width: 678px;
+        max-height: 440px;
+    }
+    .section__img{
+        max-width: 678px;
+        max-height: 440px;
+        grid-column: span var(--num-grid-columns);
+        width: 100%;
+        height: 80%;
+        
+    }
+    .section__h1{
+        width: 100%;
+        font-size: clamp(20px,4vw,40px);
+        font-weight: 700;
+        line-height: 120%;
+    }
+    .section__right-container{
+        float: none;
+        transform: translateY(-75%);
+        /* border: 3px solid black; */
+        width: 100%;
+        height: 40%;
+    }
+    .section__text__container{
+        width: 100%;
+    }
+    #section2__left-container{
+        transform: translateY(70%);
+    }
+    #section2__right-container{
+        transform: translateY(-190%);
+    }
+    #section2__right-container > .section__img__container{
+        height: 220px;
+    }
+    .left{ 
+        transform: translateX(0%);
+    }
+
+    footer{
+        height: 760px;
+        background: var(--background-color);
+        padding: 55px 45px;
+    }
+    
+    .footer__container{
+        height: 200px;
+    }
+    .footer__left-container{
+        height: 100%;
+        width: 100%;
+        float: none;
+    }
+    
+    .footer__h2{
+        font-size: 36px;
+    }
+    
+    .footer__h3{
+        font-size: 20px;
+        margin-top: 20px;
+    }
+    .footer__right-container{
+        height: 100%;
+        float: none;
+        width: 100%;
+    }
+    
+    .footer__info{
+        float: left;
+        /* border: 3px solid red; */
+        width: 140px;
+        height: 100%;
+    }
+    
+    .company, .politics{
+        transform: translateX(20%);
+    }
 }
 
 /*Laptop*/
