--- a/src/css/home.css
+++ b/src/css/home.css
@@ -776,13 +776,17 @@ footer{
     }
 
     .home__container__message{
-        width: 100%;
+        width: 55%;
+        transform: translate(5%,20%);
         margin-left: -2em;
     }
     .home__main-message{
         /* font-size: clamp(24px,5vw,34px); */
-        font-size: 35px;
-        width: 95%;
+        font-size: 56px;
+        font-weight: 800;
+        width: 80%;
+        height: 40%;
+        margin-bottom: 40px;
         transform: translateX(8%);
     }
     .home__message{
@@ -805,10 +809,10 @@ footer{
         margin-right: 20px;
     }
     .image__left__container{
-        width: 70%;
+        width: 365px;
         height: 40%;
         margin-top: 40px;
-        transform: translate(35%, 130%);
+        transform: translate(125%, 60%);
     }
     .image__right__container{
         transform: translate(100%,130%);
@@ -821,97 +825,106 @@ footer{
     }
 
     .section-area{
-        height: 544px;
-        padding: 16px 24px;
+        height: 504px;
+        padding: 80px 40px;
     }
     .section__left-container{
-        float: none;
-        width: 100%;
-        max-width: 678px;
-        max-height: 440px;
-    }
-    .section__img__container{
-        width: 100%;
-        height: 70%;
-        max-width: 678px;
-        max-height: 440px;
-    }
-    .section__img{
-        max-width: 678px;
-        max-height: 440px;
-        grid-column: span var(--num-grid-columns);
-        width: 100%;
-        height: 80%;
-        
-    }
-    .section__h1{
-        width: 100%;
-        font-size: clamp(20px,4vw,40px);
-        font-weight: 700;
-        line-height: 120%;
+        width: 50%;
+        height: 100%;
+        float: left;
+        transform: translateX(-8%);
     }
     .section__right-container{
-        float: none;
-        transform: translateY(-75%);
-        /* border: 3px solid black; */
-        width: 100%;
-        height: 40%;
+        width: 50%;
+        height: 100%;
+        float: right;
     }
+    
+    .section__img{
+        width: 100%;
+        height: 100%;
+    }
+    
+    .left{ 
+        transform: translateX(10%);
+    }
+    
     .section__text__container{
         width: 100%;
     }
-    #section2__left-container{
-        transform: translateY(70%);
+    
+    .section__h1{
+        /* --section-color: var(--not-quite-dark); */
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 120%;
+        font-family: var(--font-display);
+        color: var(--section-color);
     }
-    #section2__right-container{
-        transform: translateY(-190%);
+    
+    .section__p{
+        /* --section-color: var(--not-quite-dark); */
+        margin-top: 24px;
+        font-size: clamp(16px,2vw,20px);
+        line-height: 1.625;
+        font-weight: inherit;
+        font-style: inherit;
+        font-family: inherit;
+        vertical-align: baseline;
+        color: var(--section-color);
+        text-rendering: optimizeLegibility;
+        text-align: justify;
     }
-    #section2__right-container > .section__img__container{
-        height: 220px;
-    }
-    .left{ 
-        transform: translateX(0%);
-    }
+    
 
     footer{
-        height: 760px;
+        height: 520px;
         background: var(--background-color);
-        padding: 55px 45px;
+        padding: 80px 0px 64px 0px;
     }
     
     .footer__container{
         height: 200px;
     }
+    
     .footer__left-container{
         height: 100%;
-        width: 100%;
-        float: none;
+        width: 40%;
+        float: left;
+        transform: translateX(15%);
     }
     
     .footer__h2{
-        font-size: 36px;
+        color: var(--white);
+        font-size: 40px;
+        font-weight: 700;
     }
     
     .footer__h3{
-        font-size: 20px;
-        margin-top: 20px;
+        color: var(--white);
+        font-size: 25px;
+        font-weight: 500;
+        margin-top: 10px;
     }
+    
     .footer__right-container{
         height: 100%;
-        float: none;
-        width: 100%;
+        float: right;
+        width: 55%;
+        transform: translateX(15%);
+
     }
     
     .footer__info{
         float: left;
         /* border: 3px solid red; */
-        width: 140px;
+        width: 195px;
         height: 100%;
     }
     
-    .company, .politics{
+    /* .company, .politics{
         transform: translateX(20%);
-    }
+    } */
 }
 
 /*Laptop*/
