--- a/src/css/home.css
+++ b/src/css/home.css
@@ -65,17 +65,14 @@
 
 .navbar__text{
     color: var(--letter-color);
-    /* color: black; */
     font-weight: 700;
     margin-right: 2rem;
-    /* font-family: 'Roboto Slab', serif; */
     font-family: 'Oxygen', sans-serif;
     font-size: 18px;
     padding-top: 20px;
 }
 
 .navbar__start{
-    /* border: 5px solid yellow; */
     margin-left: 3rem;
 }
 
@@ -102,7 +99,6 @@
 /* Theme btn */
 
 .theme__container__btn{
-    /* border: 10px solid red; */
     padding-top: 26px;
     transform: translateX(1900%);
 }
@@ -258,9 +254,7 @@ input[type="checkbox" i] {
     padding: 120px 40px;
     width: 100%;
     height: 545px;
-    /* position: absolute; */
     z-index: 1;
-    /* border: 3px solid red; */
 }
 
 .home__container__message{
@@ -274,7 +268,6 @@ input[type="checkbox" i] {
     font-family: var(--font-display);
     font-weight: 800;
     font-size: 56px;
-    /* font-size: clamp(24px,5vw,44px); */
     line-height: 95%;
     text-transform: uppercase;
     text-rendering: geometricPrecision;
@@ -283,7 +276,6 @@ input[type="checkbox" i] {
     display: block;
     width: 760px;
     height: 56px;
-
 }
 
 .home__message__div{
@@ -910,16 +902,17 @@ footer{
     .footer__right-container{
         height: 100%;
         float: right;
-        width: 55%;
-        transform: translateX(15%);
+        width: 50%;
+        transform: translateX(-15%);
 
     }
     
     .footer__info{
         float: left;
         /* border: 3px solid red; */
-        width: 195px;
+        width: 175px;
         height: 100%;
+        transform: translateX(45%);
     }
     
     /* .company, .politics{
@@ -953,7 +946,7 @@ footer{
         color: var(--white);
     }
     .navbar-burger{
-        transform: translateY(25%);
+        transform: translate(-30%,25%);
     }
     .theme__container__btn{
         width: 50px;
@@ -1008,7 +1001,7 @@ footer{
         width: 365px;
         height: 40%;
         margin-top: 40px;
-        transform: translate(125%, 60%);
+        transform: translate(140%, 60%);
     }
     .image__right__container{
         transform: translate(100%,130%);
@@ -1112,32 +1105,49 @@ footer{
     .all{
         width: 100%;
     }
+    .navbar__brand{
+        width: 260px;
+    }
     .nav-bar__logo__container{
         transform: translateX(-45px);
     }
+    .navbar__menu{
+        transform: translate(0%,22%);
+    }
+
+    .navbar__start{
+        margin: 0;
+    }
+    .navbar__end{
+        transform: translate(35%,5%);
+    }
     .navbar__text{
-        color: var(--not-quite-dark);
-        padding: 5px 12px;
-        font-size: 16px;
-        line-height: 24px;
-        font-weight: 300;
+        color: var(--letter-color);
+        font-weight: 700;
+        margin-right: 1rem;
+        font-family: 'Oxygen', sans-serif;
+        font-size: 18px;
+        padding-top: 20px;
         
     }
     .navbar__login__btn{
-        transform: translateX(30%);
-        width: 60%;
-        background-color: var(--bluish-purple);
-        color: var(--white);
+        border-radius: 40px;
+        font-size: 14px;
+        padding: 7px 16px;
+        background-color: var(--letter-color);
+        font-weight: 500;
+        line-height: 24px;
+        cursor: pointer;
+        border-color: var(--background-color);
     }
     .navbar__login__btn:hover{
-        color: var(--white);
+        color: var(--background-color);
+        box-shadow: 0px 6px 6px 0px rgba(30, 30, 31, 0.5);
     }
-    .navbar-burger{
-        transform: translateY(25%);
-    }
+    
     .theme__container__btn{
         width: 50px;
-        transform: translate(730%,8%);
+        transform: translate(1290%,8%);
         /* transform: translate(570%, 40%); */
     }
     .navbar__brand{
@@ -1151,55 +1161,89 @@ footer{
         margin-top: 30px;
     }
 
+    .home__container{
+        padding: 120px 40px;
+        width: 100%;
+        height: 545px;
+        z-index: 1;
+    }
+    
     .home__container__message{
-        width: 55%;
-        transform: translate(5%,20%);
-        margin-left: -2em;
+        width: 620px;
+        height: 280px;
+        text-align: center;
+        margin-left: 20%;
     }
+    
     .home__main-message{
-        /* font-size: clamp(24px,5vw,34px); */
-        font-size: 56px;
+        font-family: var(--font-display);
         font-weight: 800;
-        width: 80%;
-        height: 40%;
-        margin-bottom: 40px;
-        transform: translateX(8%);
+        font-size: 56px;
+        line-height: 95%;
+        text-transform: uppercase;
+        text-rendering: geometricPrecision;
+        color: var(--letter-color);
+        font-style: inherit;
+        display: block;
+        width: 620px;
+        height: 56px;
     }
-    .home__message{
-        text-align: justify;
-        padding-left: 50px;
+    
+    .home__message__div{
+        margin-top: 40px;
+        font-size: 20px;
         font-size: clamp(16px,2vw,20px);
-        transform: translateY(-20%);
+        line-height: 1.625;
+        color: var(--letter-color);
     }
+    
     .home__message__btn{
-        transform: translate(14%,-15%);
-        width: 90%;
-        height: 100%;
-        /* border: 5px solid black; */
+        margin-top: 4rem;
     }
     .home__btn{
+        border-radius: 28px;
+        font-size: 20px;
+        padding: 16px 32px;
+        border-radius: 28px;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 24px;
+        cursor: pointer;
         display: block;
+        width: 330px;
+        transform: translateX(40%);
+        margin-bottom: 30px;
     }
-    .btn__browser{
-        margin-top: 20px;
-        margin-right: 20px;
-    }
+    
+    
     .image__left__container{
-        width: 365px;
-        height: 40%;
-        margin-top: 40px;
-        transform: translate(125%, 60%);
+        position: absolute;
+        margin-top: 1rem;
+        margin-left: -4rem;
+        transform: translate(0%, 65%);
     }
-    .image__right__container{
-        transform: translate(100%,130%);
-    }
-    .image__right__div{
-        width: 200px;
-    }
+    
     .hidden{
-        display: none;
+        display: contents;
+    }
+    
+    .image__right__container{
+        position: absolute;
+        margin-top: -20%;
+    }
+    
+    .image__right__div{
+        width: 201px;
+        transform: translateX(370%);
     }
 
+    .image__right{
+        width: 200px;
+        height: 200px;
+    }
+    .robot-hide{
+        display: none;
+    }
     .section-area{
         height: 504px;
         padding: 80px 40px;
@@ -1273,16 +1317,15 @@ footer{
     .footer__right-container{
         height: 100%;
         float: right;
-        width: 50%;
-        transform: translateX(0%);
-
+        width: 70%;
+        transform: translateX(-20%);
     }
-    
     .footer__info{
         float: left;
-        /* border: 3px solid red; */
         width: 195px;
         height: 100%;
-        transform: translateX(10%);
+    }
+    .company, .politics{
+        transform: translateX(20%);
     }
 }
