--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1320,15 +1320,17 @@ footer{
     .footer__right-container{
         height: 100%;
         float: right;
-        width: 70%;
-        transform: translateX(-20%);
+        width: 50%;
+        transform: translateX(0%);
+
     }
+    
     .footer__info{
         float: left;
+        /* border: 3px solid red; */
         width: 195px;
         height: 100%;
-    }
-    .company, .politics{
-        transform: translateX(20%);
+        transform: translateX(10%);
+        margin-right: 1.7rem;
     }
 }
